[workspace]

[package]
name = "prodzilla"
version = "0.0.3-rc.5"
edition = "2021"

[dependencies]
axum = { version = "0.7.2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.11" }
lazy_static = "1.4.0"
futures = "0.3.29"
wiremock = "0.5.22"
chrono = { version = "0.4.31", features = ["serde"] }
regex = "1.10.3"
uuid = { version = "1", features = ["v4"] }
opentelemetry = "0.23.0"
opentelemetry-http = "0.12.0"
opentelemetry_sdk = { version = "0.23.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.16.0", features = [
    "metrics",
    "http-json",
    "http-proto",
    "reqwest-client",
] }
opentelemetry-semantic-conventions = "0.15.0"
clap = { version = "4.5.4", features = ["derive"] }
opentelemetry-stdout = { version = "0.4.0", features = ["metrics", "trace"] }
